--- a/etc/config.json
+++ b/etc/config.json
@@ -1,5 +1,5 @@
 {
-  "apiPrefix": "https://jamaurznlapp.herokuapp.com",
+  "apiPrefix": "https://jamaurznlife.herokuapp.com",
   "serverPort": "8080",
   "db":{
     "name": "app",
